vlib/v/checker/tests/shift_op_wrong_left_type_err.vv
fn main() {
	println(0.5 << 1)
}